--- a/frontend/assets/global.css
+++ b/frontend/assets/global.css
@@ -165,6 +165,17 @@ li {
   padding-bottom: 1em;
 }
 
+.walletButton {
+  background-color: var(--light-gray);
+  border-radius: 5px;
+  border: none;
+  color: var(--secondary);
+  cursor: pointer;
+  padding: 0.3em 0.75em;
+  transition: transform 30ms;
+  margin-bottom: 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     --bg: #1e1e1e;
