--- a/frontend/assets/global.css
+++ b/frontend/assets/global.css
@@ -11,22 +11,21 @@ html {
   --success: rgb(90, 206, 132);
   --primary: #ff585d;
   --secondary: #0072ce;
+}
 
-  background-color: var(--bg);
+body {
+  margin: 0;
+  padding: 1em;
+  background-color: var(--bg) !important;
   color: var(--fg);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   font-size: calc(0.9em + 0.5vw);
   line-height: 1.3;
 }
 
-body {
-  margin: 0;
-  padding: 1em;
-}
-
 main {
   margin: 0 auto;
-  max-width: 26em;
+  max-width: 1080px;
 }
 
 main.please-wait {
@@ -38,9 +37,8 @@ h1 {
   background-repeat: no-repeat;
   background-size: auto 1.5em;
   margin-top: 0;
-  padding: 3.5em 0 0;
+  padding: 2.5em 0 1em 0;
   text-align: center;
-  font-size: 1.5em;
 }
 
 h2 {
@@ -94,10 +92,6 @@ ul.information {
   margin-right: 10px;
   padding-bottom: 0.5em;
 }
-.change button {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-}
 
 a,
 .link {
@@ -123,24 +117,11 @@ input {
 main.please-wait .change button {
   position: relative;
   pointer-events: none;
-  background-color: white;
 }
 main.please-wait .change button span {
   visibility: hidden;
 }
-button {
-  background-color: var(--secondary);
-  border-radius: 5px;
-  border: none;
-  color: #efefef;
-  cursor: pointer;
-  padding: 0.3em 0.75em;
-  transition: transform 30ms;
-}
-button:hover,
-button:focus {
-  box-shadow: 0 0 10em rgba(255, 255, 255, 0.2) inset;
-}
+
 input {
   background-color: var(--light-gray);
   border: none;
@@ -149,6 +130,7 @@ input {
   color: inherit;
   padding: 0.25em 0.5em;
 }
+
 input::selection {
   background-color: var(--secondary);
   color: #efefef;
@@ -183,27 +165,6 @@ li {
   justify-content: space-evenly;
   align-items: stretch;
   font-size: 1em;
-  border: 2px solid var(--light-gray);
-  padding: 0.5em;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  align-content: stretch;
-  justify-content: space-evenly;
-  border: 2px solid var(--light-gray);
-  padding: 0.5em;
-}
-
-.row div {
-  background-color: var(--light-gray);
-  border: none;
-  border-radius: 5px 0 0 5px;
-  caret-color: var(--primary);
-  color: inherit;
-  padding: 0.25em 0.5em;
-  margin-bottom: 5px;
 }
 
 .ftDetails {
